--- a/platform.web/nimbusui/src/styles.scss
+++ b/platform.web/nimbusui/src/styles.scss
@@ -4,15 +4,15 @@
 
 @import "assets/scss/a.nimbusvars";
 @import "assets/scss/a.header";
-@import "assets/scss/a.header-sub";
+@import "assets/scss/a.globalNav";
 @import "assets/scss/a.footer";
 @import "assets/scss/a.button";
 @import "assets/scss/a.form.components";
-@import "assets/scss/a.section";
-@import "assets/scss/a.sidenav";
+// @import "assets/scss/a.section";
 @import "assets/scss/a.contentarea";
 @import "assets/scss/a.multigrid";
 @import "assets/scss/variables";
 @import "assets/scss/a.tooltip";
 @import "assets/scss/a.floating-toolbar";
-@import "assets/scss/a.custom-dropdown";
+@import "assets/scss/a.action-dropdown";
+@import "assets/scss/a.fileUpload";
