--- a/platform.web/nimbusui/src/app/components/login/login-layout.component.html
+++ b/platform.web/nimbusui/src/app/components/login/login-layout.component.html
@@ -13,30 +13,24 @@
 </div>
 
 <!-- Everything after header -->
-<div class="wrapper no-sidebar">
+<div class="wrapper">
 	<div class="main-content" >
 		<router-outlet></router-outlet>
-		
-		<div id="footer" class="nm-footer bottom" *ngIf="footer">
-        	<div class="footer-text">
-				<ul>
-					<li *ngIf="footer.version" >
-							<nm-paragraph [element]="footer.version" ></nm-paragraph>  
-					</li>
-					<li *ngIf="footer.copyright">
-							<nm-paragraph [element]="footer.copyright" ></nm-paragraph> 
-					</li>
-					<li *ngIf="footer.sslCert">
-							<nm-link [element]="footer.sslCert"></nm-link> 
-					</li>
-				</ul>
-						
-				 
-						
-				  
-						
-			
-        	</div>
-        </div>
+
 	</div><!--  END main-content  -->
 </div><!--  END wrapper  -->
+<div id="footer" class="nm-footer bottom" *ngIf="footer">
+		<div class="footer-text">
+			<ul>
+				<li *ngIf="footer.version" >
+						<nm-paragraph [element]="footer.version" ></nm-paragraph>  
+				</li>
+				<li *ngIf="footer.copyright">
+						<nm-paragraph [element]="footer.copyright" ></nm-paragraph> 
+				</li>
+				<li *ngIf="footer.sslCert">
+						<nm-link [element]="footer.sslCert"></nm-link> 
+				</li>
+			</ul>
+		</div>
+	</div>
