--- a/platform.web/nimbusui/src/app/components/platform/content/page-content.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/content/page-content.component.html
@@ -2,9 +2,9 @@
 <div>
     {{pageParam?.message?.text}}
 </div>
-<ng-template [ngIf]="pageParam.config.uiStyles.attributes.title">
+<ng-template [ngIf]="pageParam?.config?.labelConfigs?.length > 0">
     <h1 class="page-title">
-        {{pageParam.config.uiStyles.attributes.title}}
+        {{label}}
     </h1>
 </ng-template>
 <nm-tile [element]="tile" *ngFor="let tile of tilesList"></nm-tile>
