--- a/platform.web/nimbusui/src/app/components/platform/form.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/form.component.html
@@ -2,7 +2,7 @@
 <form id="{{formId}}" [formGroup]="form" novalidate>
     <!--condition for rendering accordion groups inside form-->
     <accordion *ngIf="groups.length>0" >
-        <accordion-group [title]="group?.config?.code" [formGroup]="form" [panelClass]="group?.config?.uiStyles?.attributes?.cssClass" *ngFor="let group of groups">
+        <accordion-group [param]="group" [title]="group?.config?.code" [formGroup]="form" [panelClass]="group?.config?.uiStyles?.attributes?.cssClass" *ngFor="let group of groups">
             <nm-frm-grp [elements]="group?.type?.model?.params" [form]="form" [elementCss]="elementCss"> </nm-frm-grp>
         </accordion-group>
     </accordion>
