--- a/platform.web/nimbusui/src/app/components/platform/modal/modal.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/modal/modal.component.html
@@ -1,7 +1,8 @@
 <ng-template [ngIf]="type == 'dialog'">
     <p-dialog [(visible)]="visible" [closable]="closable" (onHide)="closeDialog($event)" [closeOnEscape]="false" [modal]="true" [width]="width" appendTo="body" [responsive]="true">
-        <p-header *ngIf="title">
-            {{title}}
+        <p-header *ngIf="label">
+            {{label}}
+            <nm-tooltip *ngIf="helpText" [helpText]='helpText'></nm-tooltip>
         </p-header>
         <ng-template ngFor let-element [ngForOf]="nestedParams">
             <ng-template [ngIf]="element.alias == 'Section'">
