--- a/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form-element.component.html
@@ -13,14 +13,14 @@
     <nm-multiselect-dropdown id="{{id}}" *ngIf="element.config?.uiStyles?.attributes?.alias == 'MultiSelect1'" [formControlName]="element.config?.code" ngDefaultControl [element]="element"  [form]="form"></nm-multiselect-dropdown>
     <nm-multi-select-listbox id="{{id}}" *ngIf="element.config?.uiStyles?.attributes?.alias == 'MultiSelect'" [element]="element"  [form]="form"></nm-multi-select-listbox>
     <nm-multiselect-card id="{{id}}"  *ngIf="element.config.uiStyles?.attributes?.alias == 'MultiSelectCard'" [formControlName]="element.config?.code" ngDefaultControl [element]="element" [form]="form"></nm-multiselect-card>
-    <nm-pickList id="{{id}}"  *ngIf="element.config?.uiStyles?.attributes?.alias == 'PickList'" [formControlName]="element.config?.code" ngDefaultControl [element]="element" [form]="form"></nm-pickList>
+    <nm-pickList id="{{id}}" *ngIf="element.config?.uiStyles?.attributes?.alias == 'PickList'" [formControlName]="element.config?.code" ngDefaultControl [element]="element" [form]="form"></nm-pickList>
+    <nm-upload id="{{id}}" *ngIf="element.config?.uiStyles?.attributes?.alias == 'FileUpload'" [formControlName]="element.config?.code" [element]="element" [form]="form"></nm-upload>
     <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == 'Grid'">
         <infinite-scroll-grid
             [element]="element" [form]="form" [formControlName]="element.config?.code"
             [params]="element?.config?.gridCols" (onScrollEvent)="onScrollEvent()">
         </infinite-scroll-grid>
     </ng-template>
-    <nm-upload id="{{id}}"  *ngIf="element.config?.uiStyles?.attributes?.alias == 'FileUpload'" [element]="element" [form]="form"></nm-upload>
     <div *ngIf="showErrors==true">
         <p class="warningMsg" *ngFor="let error of getErrors()">{{error}}</p>
     </div>
