--- a/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
@@ -1,4 +1,4 @@
-
+{{form.value | json}}
 <form id="{{formId}}" [formGroup]="form" novalidate>
     <!--condition for rendering accordion groups inside form-->
     <accordion *ngIf="groups.length>0" >
