--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -46,7 +46,7 @@ textarea.form-control {
     max-height: 140px;
     min-height: 140px;
     height: 140px;
-    word-break: break-all;
+    word-break: break-word;
     white-space: normal;
 }
 //styling for form alerts.. 
@@ -174,9 +174,12 @@ p-dropdown.form-control {
 // END inline edit text input styles for inplace-editor.component
 
 //date and time input
-.ui-calendar .ui-calendar-button {
-    height: 2.15rem;
-}
+.ui-calendar {
+    display: block;
+    .ui-calendar-button {
+        height: 2.15rem;
+    }
+} 
 .ui-timepicker.ui-widget-header{
     text-align: center;
 }
